# prompt-security-home-assignment

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.cursor/rules/: notion.mdc  playwright.mdc  pom.mdc  pytest.mdc
.github/: CODEOWNERS
.github/workflows/: allure-report.yml  ci.yml
config/: __init__.py  settings.py
html1/: test.html
scripts/: __init__.py  fetch_extension.py  probe_gemini_block.py  push_to_notion.py  reshape_notion_page.py  smoke_notion.py
skills/: SKILL_STYLE_GUIDE.md
skills/automation-tester/: SKILL.md
skills/site-discovery/: SKILL.md
skills/stakeholder-reporting/: SKILL.md
skills/test-fixer/: SKILL.md
skills/test-generation/: SKILL.md
tests/: __init__.py  conftest.py
tests/pages/: __init__.py  base_page.py  chatgpt_page.py  extension_popup_page.py  gemini_page.py  web_app_page.py
tests/ui/: test_failure_demo.py  test_policy_enforcement.py
utils/: __init__.py  logger.py  notion_client.py  pytest_summary.py  reporting.py  soft_assert.py
