[project]
name = "prompt-security-extension-tests"
version = "0.1.0"
description = "Playwright + pytest automation for Prompt Security browser extension GenAI allow/block policy"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Maintainer", email = "maintainer@example.com" }]
dependencies = [
    "allure-pytest>=2.13.5",
    "httpx>=0.27.2",
    "loguru>=0.7.3",
    "playwright>=1.51.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-metadata>=3.1.0",
    "pytest-reporter-html1>=0.9.5",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = ["pre-commit>=4.2.0", "ruff>=0.11.0"]

[tool.uv]
constraint-dependencies = ["h11>=0.16.0"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "class"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--alluredir=reports/allure-results",
    "--template=html1/index.html",
    "--report=reports/report.html",
    "-ra",
    "-s",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(levelname)-8s | %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "smoke: marks tests as smoke tests",
    "regression: marks tests as regression tests",
    "ui: UI tests",
    "api: API tests",
    "demo: intentional-failure tests for failure-reporting pipeline verification (runs in CI; non-blocking via continue-on-error)",
]
